--- a/house.gov.by/9c2d88cc13bd506ceba3c56e083f7cb1e73ee076.yml
+++ b/house.gov.by/9c2d88cc13bd506ceba3c56e083f7cb1e73ee076.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 21:45:25 GMT
+    - Sat, 21 Oct 2017 23:09:28 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=sa9v8nh9ack4tufc1a13put0e2; path=/
+    - PHPSESSID=b22tdltqverjgh40mslkn0gs71; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 21:45:26 GMT
+recorded_at: Sat, 21 Oct 2017 23:09:29 GMT
