--- a/house.gov.by/c98033743ca2fc6879dd09787c8e3d04e2502ccc.yml
+++ b/house.gov.by/c98033743ca2fc6879dd09787c8e3d04e2502ccc.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 22:11:57 GMT
+    - Sat, 21 Oct 2017 23:09:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=gvlhpchujr981a61no5ii1dmk4; path=/
+    - PHPSESSID=boii4rv29mt02tvnlnh7r2aap0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 22:11:58 GMT
+recorded_at: Sat, 21 Oct 2017 23:09:54 GMT
