--- a/house.gov.by/c232bbe7392341325100831a4df8793e387d4081.yml
+++ b/house.gov.by/c232bbe7392341325100831a4df8793e387d4081.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 21:15:03 GMT
+    - Sat, 21 Oct 2017 23:12:24 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=q7kus2d914eqdh8s3f8f6v4dk3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 21:15:03 GMT
+recorded_at: Sat, 21 Oct 2017 23:12:24 GMT
