--- a/house.gov.by/76dc4576924b978602033dde12bf7f1b1d0aaaf9.yml
+++ b/house.gov.by/76dc4576924b978602033dde12bf7f1b1d0aaaf9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 21:57:26 GMT
+    - Sat, 21 Oct 2017 23:15:00 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=uc8q42ksfn1h5cfok2rhslc705; path=/
+    - PHPSESSID=auq2c0s54di0agi5hig9s8e160; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 21:57:27 GMT
+recorded_at: Sat, 21 Oct 2017 23:15:01 GMT
