--- a/house.gov.by/20e69e40d1db804e6053e5d915542e98be8ae879.yml
+++ b/house.gov.by/20e69e40d1db804e6053e5d915542e98be8ae879.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 22:00:50 GMT
+    - Sat, 21 Oct 2017 23:28:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=7f7m6jcm11c0t8q5ou4r0idsh4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 22:00:51 GMT
+recorded_at: Sat, 21 Oct 2017 23:28:31 GMT
