--- a/house.gov.by/d95e4c5cb66cff99aa795994d3afb30976236f73.yml
+++ b/house.gov.by/d95e4c5cb66cff99aa795994d3afb30976236f73.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 22:23:25 GMT
+    - Sat, 21 Oct 2017 23:47:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=nfs4scar7vohe8p9b9i1n3a8u7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 22:23:25 GMT
+recorded_at: Sat, 21 Oct 2017 23:47:31 GMT
