--- a/house.gov.by/d75a0ec939d96097bb357b02dd11935e38450948.yml
+++ b/house.gov.by/d75a0ec939d96097bb357b02dd11935e38450948.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 21:18:28 GMT
+    - Sat, 21 Oct 2017 23:49:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=9bukhekhpfp4ktv5im9i1u5f65; path=/
+    - PHPSESSID=8vs4fu5cec6kmukvglaues40k1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 21:18:29 GMT
+recorded_at: Sat, 21 Oct 2017 23:49:16 GMT
