--- a/house.gov.by/056d7ac32a3021e1e115ec3c4b54f9fd094a228c.yml
+++ b/house.gov.by/056d7ac32a3021e1e115ec3c4b54f9fd094a228c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 22:13:53 GMT
+    - Sat, 21 Oct 2017 23:52:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=4qks7knamq26n0s0sfrfvbqq84; path=/
+    - PHPSESSID=c4eef26eh1ka872me0v1luhv94; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 22:13:54 GMT
+recorded_at: Sat, 21 Oct 2017 23:52:54 GMT
