--- a/house.gov.by/f401899002fa995b931687935221e487c5c1b8fa.yml
+++ b/house.gov.by/f401899002fa995b931687935221e487c5c1b8fa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 00:06:05 GMT
+    - Sun, 22 Oct 2017 06:50:05 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=41g0du8o0gpbi5rsscr8is24e4; path=/
+    - PHPSESSID=2cduu4gat431n6k1it2pnvsno0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 00:06:06 GMT
+recorded_at: Sun, 22 Oct 2017 06:50:06 GMT
