--- a/house.gov.by/d598141b9b8846a40829a7d6da6d78656d7936d8.yml
+++ b/house.gov.by/d598141b9b8846a40829a7d6da6d78656d7936d8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 22:32:24 GMT
+    - Sun, 22 Oct 2017 06:52:05 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=89j6jjbi80kne638jks2jafuc6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 22:32:24 GMT
+recorded_at: Sun, 22 Oct 2017 06:52:06 GMT
