--- a/house.gov.by/c00a4c423678c1c97adf54eb4aac6fe0d24dcad8.yml
+++ b/house.gov.by/c00a4c423678c1c97adf54eb4aac6fe0d24dcad8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 00:07:29 GMT
+    - Sun, 22 Oct 2017 06:53:47 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=avuke5je8aljqhh2gbub04pje6; path=/
+    - PHPSESSID=ui9dfn2q3dhqjpkc50kngiodp7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 00:07:29 GMT
+recorded_at: Sun, 22 Oct 2017 06:53:47 GMT
