--- a/house.gov.by/f858a9aae2501fc55b9f062aceead02c97dfa301.yml
+++ b/house.gov.by/f858a9aae2501fc55b9f062aceead02c97dfa301.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 00:05:07 GMT
+    - Sun, 22 Oct 2017 07:00:06 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=rg0u8vukk0que81icitk596aj0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 00:05:07 GMT
+recorded_at: Sun, 22 Oct 2017 07:00:07 GMT
