--- a/house.gov.by/3b91cb8d0e15c5e1e63d274aea80d6eb4e441e68.yml
+++ b/house.gov.by/3b91cb8d0e15c5e1e63d274aea80d6eb4e441e68.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 23:56:00 GMT
+    - Sun, 22 Oct 2017 07:01:27 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=o58448mo8afkeg5bivq2p93504; path=/
+    - PHPSESSID=4kv19fq3sbscb0lpsbg16rt3s3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 23:56:00 GMT
+recorded_at: Sun, 22 Oct 2017 07:01:27 GMT
