--- a/house.gov.by/15fb64f9fa26c0fb584b1bed05a8d67488c339fa.yml
+++ b/house.gov.by/15fb64f9fa26c0fb584b1bed05a8d67488c339fa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 22:51:50 GMT
+    - Sun, 22 Oct 2017 07:06:52 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=fp47kroavob4bd600qs6angam0; path=/
+    - PHPSESSID=f5chhvb1ejn8p42sa46u4b4vt3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 22:51:51 GMT
+recorded_at: Sun, 22 Oct 2017 07:06:52 GMT
