--- a/house.gov.by/dec2293fc956e79a4bc91eccd8fe48d84e328beb.yml
+++ b/house.gov.by/dec2293fc956e79a4bc91eccd8fe48d84e328beb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 23:28:06 GMT
+    - Sun, 22 Oct 2017 07:11:02 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=2qoscti8auhpdt71e5jqmvmd54; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 23:28:06 GMT
+recorded_at: Sun, 22 Oct 2017 07:11:03 GMT
