--- a/house.gov.by/60249ac0ab8af23b7af7ee29503a44f7985e4de9.yml
+++ b/house.gov.by/60249ac0ab8af23b7af7ee29503a44f7985e4de9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 22:57:37 GMT
+    - Sun, 22 Oct 2017 07:19:17 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=ekisr0q8c99fap94bvr5o0a9u1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - UPDATING
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 22:57:38 GMT
+recorded_at: Sun, 22 Oct 2017 07:19:17 GMT
