--- a/house.gov.by/a9add64c7e632d6060a43fd791affef82f62ae6b.yml
+++ b/house.gov.by/a9add64c7e632d6060a43fd791affef82f62ae6b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 23:24:01 GMT
+    - Sun, 22 Oct 2017 07:38:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=d5gkijakhkht5c2hb95oouqja2; path=/
+    - PHPSESSID=5ljp93tn8jtunlusjod3hl2oj2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 23:24:02 GMT
+recorded_at: Sun, 22 Oct 2017 07:38:54 GMT
