--- a/house.gov.by/468b1dd6f4bdbfacd90f0dc4afeda682cf6713f2.yml
+++ b/house.gov.by/468b1dd6f4bdbfacd90f0dc4afeda682cf6713f2.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 23:29:44 GMT
+    - Sun, 22 Oct 2017 07:54:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=rlq6bpc2cnmh0b2hf846ojos93; path=/
+    - PHPSESSID=bfigu7pdp5oiqu9prnrjqs3243; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 23:29:45 GMT
+recorded_at: Sun, 22 Oct 2017 07:54:32 GMT
