--- a/house.gov.by/87f447c456f26f395fa11ed8a0d87ee14576be22.yml
+++ b/house.gov.by/87f447c456f26f395fa11ed8a0d87ee14576be22.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 21 Oct 2017 22:31:13 GMT
+    - Sun, 22 Oct 2017 08:08:05 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=2kk0f43jk42v8s71qbuu5b23j0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 21 Oct 2017 22:31:13 GMT
+recorded_at: Sun, 22 Oct 2017 08:08:05 GMT
