--- a/house.gov.by/1c56df78afc242b33365e5c9f91904498272fecd.yml
+++ b/house.gov.by/1c56df78afc242b33365e5c9f91904498272fecd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 00:03:52 GMT
+    - Sun, 22 Oct 2017 08:15:51 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ik6gfkp2lno5mtbkd681h9lk30; path=/
+    - PHPSESSID=jsmd5ru3c259dovc5hesi4jpg4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 00:03:52 GMT
+recorded_at: Sun, 22 Oct 2017 08:15:51 GMT
