--- a/house.gov.by/2dd5adec3a457e2a3b0fef3f0889fe04d1870e5d.yml
+++ b/house.gov.by/2dd5adec3a457e2a3b0fef3f0889fe04d1870e5d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 22 Oct 2017 06:45:06 GMT
+    - Sun, 22 Oct 2017 08:17:26 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=9q9s79mv5j5925ibo6cojvs2p4; path=/
+    - PHPSESSID=3fmuom016nhvfanmvfsad1qd15; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 22 Oct 2017 06:45:07 GMT
+recorded_at: Sun, 22 Oct 2017 08:17:27 GMT
